--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html{
 .banner-btn{
     margin: 70px auto 0;
 }
-.banner-btn a{
+.btn{
     width: 150px;
     text-decoration: none;
     color: white;
@@ -50,7 +50,7 @@ html{
     position: relative;
     z-index: 1;
 }
-.banner-btn a span{
+.btn span{
     width: 0;
     height: 100%;
     position: absolute;
@@ -60,10 +60,10 @@ html{
     z-index: -1;
     transition: 0.5s;
 }
-.banner-btn a:hover span{
+.btn:hover span{
     width: 100%;
 }
-.banner-btn a:hover{
+.btn:hover{
     color: black;
     font-weight: bold;
 }
@@ -114,6 +114,90 @@ nav ul a li:hover{
 
 }
 
+.popup{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+}
+
+#popup:target{
+    visibility: visible;
+    opacity: 1;
+}
+#popup:target .popup-content{
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+}
+.popup-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(.25);
+    width: 50%;
+    background: #fff;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    opacity: 0;
+    transition: all .5s .1s ;
+}
+.popup-img{
+    display: flex;
+    width: 100%;
+    margin-bottom: 30px;
+}
+.popup-img img{
+    display: block;
+    width: 33.3333%;
+
+}
+.popup-header{
+    text-align: center;
+    text-transform: uppercase;
+    color: #555;
+    margin-bottom: 36px;
+}
+.popup-header h1{
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+.popup-header h2{
+    font-size: 20px;
+}
+.popup-text{
+    padding: 0 36px;
+    line-height: 1.4;
+}
+.popup-text p:not(:last-child){
+    margin-bottom: 16px;
+}
+.popup-text p:last-child{
+    margin-bottom: 30px;
+}
+
+
+.popup-close:link,
+.popup-close:visited{
+    position: absolute;
+    top: 12px;
+    right: 20px;
+    text-decoration: none;
+    color: #d3d2d2;
+    font-size: 30px;
+    display: inline-block;
+    line-height: 1;
+    transition: all .3s;
+}
+
+.popup-close:hover,
+.popup-close:active{
+    color: #fff;
+}
 @media screen and (max-width: 770px){
     .banner-text h1{
         font-size: 44px;
@@ -121,6 +205,63 @@ nav ul a li:hover{
     .banner-btn a{
         display: block;
         margin: 20px auto;
+    }
+    .popup-content{
+        width: 70%;
+    }
+}
+@media screen and (max-width: 550px){
+    .popup-header h1{
+        font-size: 5px;
+    }
+    .popup-header h2{
+        font-size: 10px;
+    }
+    .popup-content{
+        width: 70%;
+    }
+    .popup-header{
+        margin-bottom: 15px;
+    }
+    .popup-text p{
+        font-size: 5px;
+    }
+    .popup-close:link,
+    .popup-close:visited{
+    top: 5px;
+    right: 10px;
+    font-size: 25px;
+}
+}
+
+@media screen and (max-width: 950px){
+    .popup-header h1{
+        font-size: 20px;
+    }
+    .popup-header h2{
+        font-size: 15px;
+    }
+    .popup-text p{
+        font-size: 13px;
+    }
+}
+@media screen and (max-width: 440px){
+    .popup-img img{
+        height: 15vh;
+    
+    }
+    .popup-img{
+        margin-bottom: 15px;
+    }
+    .popup-header h1{
+        margin-bottom: 10px;
+        font-size: 13px;
+    }
+    .popup-header h2{
+        font-size: 11px;
+    }
+    .popup-text p{
+        font-size: 10px;
     }
 }
 
@@ -250,6 +391,8 @@ nav ul a li:hover{
 .single-services img{
     width: 100%;
     border-radius: 7px;
+    object-fit: cover;
+    height: 350px;
 }
 .overlay{
     width: 100%;
@@ -324,6 +467,10 @@ hr{
     align-items: flex-start;
     flex-wrap: wrap;
 }
+.feedback-row a{
+    text-decoration: none;
+    color: #000;
+}
 .feedback-col{
     flex-basis: 28%;
     padding: 10px;
@@ -344,12 +491,15 @@ hr{
     margin: 20px 0;
 }
 .user img{
-    width: 40px;
+    width: 50px;
     border-radius: 4px;
     margin-right: 20px;
 }
-.user-info i{
+
+.user-info img{
     margin-left: 10px;
+    width: 20px;
+    margin-right: 0px;
 }
 .user-info small{
     color: #009688;
